kubernetes/mastodon-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mastodon-ingress
spec:
  rules:
    - host: mastodon.ocf.berkeley.edu
      http:
        paths:
          - path: /api/v1/streaming
            backend:
              serviceName: mastodon-streaming
              servicePort: 4000
          - path: /
            backend:
              serviceName: mastodon-web
              servicePort: 3000
    - host: mastodon.ocf.io
      http:
        paths:
          - path: /api/v1/streaming
            backend:
              serviceName: mastodon-streaming
              servicePort: 4000
          - path: /
            backend:
              serviceName: mastodon-web
              servicePort: 3000
